# bake

./: .bakeignore  .gitignore  .markdownlint.json  .markdownlint.yaml  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASES.md  TASKS.md  bake.yml  cookbook.yml  coverage.info  dist-workspace.toml
.claude/: TASKS.md
.claude/commands/: address-code-review.md  code-review.md  do-task.md  fix.md
.claude/skills/bake/: SKILL.md
.claude/tasks/: code-quality-improvements.md  config_refactor.md  inline-variables-implementation.md  templates.md
.codex/skills/bake/: SKILL.md
.codex/skills/bake/references/: project-specific-skill.md
.github/workflows/: release.yml
docs/: CAS_CACHE.md  auto-update.md  configuration.md
docs/development/: architecture.md  contributing.md
docs/getting-started/: first-project.md  installation.md  quick-start.md
docs/guides/: best-practices.md  caching.md  configuration.md  custom-helpers.md  recipe-templates.md  troubleshooting.md  variables.md
docs/reference/: auto-update.md  cli-commands.md  configuration-schema.md
resources/tests/invalid/circular/: bake.yml  bar.cookbook.yml  foo.cookbook.yml
resources/tests/invalid/config/: bake.yml
resources/tests/invalid/recipes/: bar.cookbook.yml  foo.cookbook.yml
resources/tests/invalid/template-validation/: bake.yml  cookbook.yml
resources/tests/valid/: bake.yml  dependency.txt  vars.yml
resources/tests/valid/.bake/helpers/: list-files.yml  repeat.yml  uppercase.yml  with-env.yml  with-vars.yml
resources/tests/valid/.bake/templates/: build-template.yml  test-template.yml
resources/tests/valid/bar/: cookbook.yml
resources/tests/valid/foo/: build.sh  cookbook.yml  vars.yml
resources/tests/valid/foo/xyz/: cookbook.yml
resources/tests/valid/handlebars-test/: cookbook.yml
resources/tests/valid/libs/test_reader/: reader.go  utils.go
resources/tests/valid/nested/apps/gateway/: shared.txt
resources/tests/valid/nested/apps/gateway/cmd/: config.txt  cookbook.yml  main.go
resources/tests/valid/shared/: config.json
resources/tests/valid/tagged/: cookbook.yml
resources/tests/valid/templates/: cookbook.yml
schemas/: README.md  bake-project.schema.json  catalog.json  cookbook.schema.json  recipe-template.schema.json  test_schemas.py  vscode-settings.json
src/: CLAUDE.md  baker.rs  cache.rs  execution_plan.rs  lib.rs  main.rs  project.rs  template.rs  test_utils.rs  update.rs
src/cache/: CLAUDE.md  builder.rs  cas_strategy.rs  gcs.rs  local.rs  mod.rs  s3.rs
src/cache/ac/: manifest.rs  mod.rs  signing.rs  store.rs
src/cache/cas/: blob_hash.rs  blob_store.rs  chunking.rs  compression.rs  gcs.rs  index.rs  layered.rs  local.rs  mod.rs  s3.rs
src/project/: CLAUDE.md  config.rs  cookbook.rs  graph.rs  hashing.rs  helper.rs  mod.rs  recipe.rs  recipe_template.rs
tests/: baker_tests.rs  cache_tests.rs  cas_integration_tests.rs  project_tests.rs  s3_cache_tests.rs  template_tests.rs
tests/common/: mod.rs
