[package]
name = "bake-cli"
version = "0.4.9"
edition = "2021"
authors = ["Theo Ribeiro <repitilian.intern@proton.me>"]
license = "Apache-2.0"
description = "Task runner built to be tastier than `make`"
homepage = "https://github.com/trinio-labs/bake"
repository = "https://github.com/trinio-labs/bake"
readme = "README.md"
categories = ["command-line-utilities", "development-tools::build-utils"]
keywords = ["bake", "task-runner", "make", "build-tool"]
rust-version = "1.87.0"

[[bin]]
name = "bake"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
aws-config = "1.6.2"
aws-sdk-s3 = "1.84.0"
blake3 = "1.8.2"
bytes = "1.8.0"
clap = { version = "4.5.38", features = ["derive"] }
console = "0.15.11"
env_logger = "0.11.8"
futures-core = "0.3.31"
futures-util = "0.3.31"
globset = "0.4.16"
google-cloud-storage = { version = "0.24.0", features = ["external-account"] }
handlebars = "6.3.2"
ignore = "0.4.23"
indexmap = { version = "2.9.0", features = ["serde"] }
indicatif = "0.17.11"
log = "0.4.27"
petgraph = "0.8.1"
rand = "0.9.1"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tar = "0.4.44"
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
validator = { version = "0.20.0", features = ["derive"] }
zstd = "0.13.3"

[dev-dependencies]
tempfile = "3.20.0"
test-case = "3.3.1"
mockall = "0.13.0"
tokio-test = "0.4.4"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# Customize the Homebrew formula name
formula = "bake"
# A GitHub repo to push Homebrew formulas to
tap = "trinio-labs/tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
