[package]
name = "bake-cli"
version = "0.5.0"
edition = "2021"
authors = ["Theo Ribeiro <repitilian.intern@proton.me>"]
license = "Apache-2.0"
description = "Task runner built to be tastier than `make`"
homepage = "https://github.com/trinio-labs/bake"
repository = "https://github.com/trinio-labs/bake"
readme = "README.md"
categories = ["command-line-utilities", "development-tools::build-utils"]
keywords = ["bake", "task-runner", "make", "build-tool"]
rust-version = "1.87.0"

[[bin]]
name = "bake"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
aws-config = "1.8.0"
aws-sdk-s3 = "1.94.0"
blake3 = "1.8.2"
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive"] }
console = "0.15.11"
dirs = "6.0.0"
env_logger = "0.11.8"
futures-core = "0.3.31"
futures-util = "0.3.31"
globset = "0.4.16"
google-cloud-storage = { version = "0.24.0", features = ["external-account"] }
handlebars = "6.3.2"
ignore = "0.4.23"
indexmap = { version = "2.9.0", features = ["serde"] }
indicatif = "0.17.11"
log = "0.4.27"
pathdiff = "0.2.3"
petgraph = "0.8.2"
rand = "0.9.1"
regex = "1.11.1"
self_update = { version = "0.42.0", features = [
    "archive-tar",
    "compression-flate2",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tar = "0.4.44"
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
validator = { version = "0.20.0", features = ["derive"] }
zstd = "0.13.3"

[dev-dependencies]
tempfile = "3.20.0"
test-case = "3.3.1"
mockall = "0.13.1"
tokio-test = "0.4.4"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
