[package]
name = "bake-cli"
version = "2.0.2"
edition = "2024"
authors = ["Theo Ribeiro <repitilian.intern@proton.me>"]
license = "Apache-2.0"
description = "Task runner built to be tastier than `make`"
homepage = "https://github.com/trinio-labs/bake"
repository = "https://github.com/trinio-labs/bake"
readme = "README.md"
categories = ["command-line-utilities", "development-tools::build-utils"]
keywords = ["bake", "task-runner", "make", "build-tool"]
rust-version = "1.92.0"

[lib]
name = "bake"
path = "src/lib.rs"

[[bin]]
name = "bake"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
aws-config = "1.8.11"
aws-sdk-s3 = "1.109.0"
blake3 = "1.8.2"
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["derive"] }
console = "0.16.2"
dirs = "6.0.0"
env_logger = "0.11.8"
futures-core = "0.3.31"
futures-util = "0.3.31"
globset = "0.4.18"
google-cloud-storage = "1.5.0"
handlebars = "6.3.2"
hex = "0.4.3"
hostname = "0.4.2"
ignore = "0.4.25"
indexmap = { version = "2.12.1", features = ["serde"] }
indicatif = "0.18.3"
libc = "0.2"
log = "0.4.29"
num_cpus = "1.17.0"
pathdiff = "0.2.3"
petgraph = "0.8.3"
rayon = "1.11"
rand = "0.9.2"
regex = "1.12.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
sha2 = "0.10.9"
self_update = { version = "0.42.0", features = [
  "archive-tar",
  "compression-flate2",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tar = "0.4.44"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.17"
validator = { version = "0.20.0", features = ["derive"] }
zstd = { version = "0.13.3", features = ["zstdmt"] }
hmac = "0.12"

[dev-dependencies]
tempfile = "3.23.0"
test-case = "3.3.1"
mockall = "0.14.0"
tokio-test = "0.4.4"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
